infra/k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: finsight-api-netpol
  namespace: finsight
spec:
  podSelector:
    matchLabels:
      app: finsight-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: finsight-dashboard
      ports:
        - port: 8000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 8000
  egress:
    - ports:
        - port: 5432
    - ports:
        - port: 4317
    - ports:
        - port: 443
    - ports:
        - port: 53
          protocol: UDP
